Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-9001

[PATCH] Fix DB name quoting in mysqldump --routine

Details

    • 5.5.47-1

    Description

      MariaDB fix for: https://bugs.mysql.com/bug.php?id=78932

      (code is original, not copied from MySQL)

      It would be great to get a backport of this to as many versions are supported … the breakage from this is pretty debilitating when you want a full backup of everything.

      Attachments

        Issue Links

          Activity

            People

              svoj Sergey Vojtovich
              svoj Sergey Vojtovich
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.