MDEV-9001 - [PATCH] Fix DB name quoting in mysqldump --routine

mysqldump --routine fails to dump databases containing backslash ("\")
character. This happened because escaped database name was being used as an
identifier while changing current database. Such identifers are not supposed
to be escaped, they must be properly quoted instead.